04.Application-Lifecycle/exercise-application/application-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver
  name: webserver-dev
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webserver
  sessionAffinity: None
  type: ClusterIP
